# ML_in_CP_UVie_SS26

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  GETTING_STARTED.md  Project.toml  README.md  RESOURCES.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
Module_III_Unsupervised_Learning/WS3_Dimensionality_Reduction/: WS3_Dimensionality_Reduction.ipynb
Module_II_Data_Featurization/WS2_Data_Representation/: WS2_Data_Representation.ipynb
Module_IV_Regression/WS4_Parametrization/: WS4_Parametrization.ipynb
Module_I_Introduction/WS1_Introduction/: WS1_Introduction.ipynb  WS1_Introduction_solutions.ipynb
Module_VII_HDNNP/WS7_MACE_Potentials/: WS7_MACE_Potentials.ipynb
Module_VI_Graphs/WS6_Writing_GNN/: WS6_Writing_GNN.ipynb  utils.py
Module_V_Neural_Networks/WS5_Neural_Networks/: WS5_Neural_Networks.ipynb
data/mW/N256/0-cubic/: iceIc_256.lmp  md.lmp  topology.lammpsdump
data/mW/N256/1-hexagonal/: iceIh_256.lmp  md.lmp  topology.lammpsdump
data/mW/N256/2-liquid/: liquid_256.lmp  md.lmp  topology.lammpsdump
data/mW/N256/3-amorphous/: amorph_256.lmp  md.lmp  topology.lammpsdump
data/mW/N256/4-nucleating/: topology.lammpsdump
data/mace_data/: solvent_xtb_test.xyz  solvent_xtb_train_200.xyz
